<resources>
    <string name="app_name">Masters of Disasters</string>
    <string name="offer">Our offer includes:</string>
    <string name="furniture">customizing your furniture with claws</string>
    <string name="spots">making paw-like spots on baths, sinks etc.</string>
    <string name="flies">catching flies</string>
    <string name="shredding">shredding cardboard with teeth</string>
    <string name="soil">soil digging</string>
    <string name="laundry">sorting laundry</string>
    <string name="drawers">opening drawers and closets</string>
    <string name="more">and many more</string>
    <string name="scroll">Scroll down to see some of our projects</string>
    <string name="hire_us">Interested? Hire us!</string>
    <string name="name">Masters of Disasters Ltd</string>
    <string name="address">Piaseczno, Masovian District, Poland</string>
    <string name="hours">Opening hours: 8&#8211;11 PM, 4&#8211;8 AM</string>
    <string name="find">We are on YouTube: TigerBuddies</string>
    <string name="desc_masters">Two cats looking down from wardrobe</string>
    <string name="desc_plants">Plants and soil dug out by cats</string>
    <string name="desc_drawers">Two cats looking into open drawers</string>
    <string name="desc_laundry">Laundry dug out from washing machine by cats</string>
    <string name="desc_hire_us">Two cats on a chair</string>
</resources>
