<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.android.mastersofdisasters.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:text="@string/offer"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey1"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/furniture"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey2"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/spots"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey3"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/flies"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey4"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/shredding"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey5"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/soil"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey6"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/laundry"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey7"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/drawers"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey8"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/more"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey9"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="18dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/catpaw" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/scroll"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_masters"
                android:scaleType="centerCrop"
                android:src="@drawable/masters2" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_plants"
            android:scaleType="centerCrop"
            android:src="@drawable/plants" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_drawers"
            android:scaleType="centerCrop"
            android:src="@drawable/drawers" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_laundry"
            android:scaleType="centerCrop"
            android:src="@drawable/laundry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="10dp"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:text="@string/hire_us"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey1"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"
                android:paddingTop="5dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey2"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"
                android:paddingTop="5dp"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey3"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"
                android:paddingTop="5dp"
                android:text="@string/hours"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey4"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"
                android:paddingTop="5dp"
                android:text="@string/find"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_hire_us"
                android:scaleType="centerCrop"
                android:src="@drawable/hire_us" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
